Mon Feb  5 14:58:58 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* Makefile.am (maintainer-check): Expect only one ${...}.
	* texinfos.am (install-info): Remove unneeded ${...}.  From Jim
	Meyering.

	* automake.in (handle_configure): Only define CONFIG_HEADER if
	$config_name.
	($seen_gettext): New variable.
	(handle_subdirs): Do all gettext-related checking here.
	(scan_configure): Just set $seen_gettext.
	(handle_man_pages): Properly quote $(MANS).

Wed Jan 31 09:51:30 1996  Tom Tromey  (tromey@gerbil.cygnus.com)

	* depend.am: Don't use srcdir anywhere.
	* automake.in (handle_libraries): Don't make .deps relative to
	srcdir.
	(handle_options): Recognize no-dependencies.

	* depend.am (MKDEP): From Jim Meyering: Do nothing if srcdir is
	".".  Properly quote regexp.

Tue Jan 30 12:19:09 1996  Tom Tromey  (tromey@gerbil.cygnus.com)

	* automake.in (handle_configure): Only defined CONFIG_HEADER if
	$config_name.
	(read_am_file): Quote regexp when substituting top_builddir.
	(handle_source_transform, handle_libraries): Look in
	$(srcdir)/.deps for .P files.

Fri Jan 26 00:15:25 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (am_conf_error): New function.
	(scan_configure): Use it.
	(scan_configure): A comma also ends AC_OUTPUT macro.

	* automake.in (read_am_file): Compute top_builddir when including
	header-vars.am.
	(handle_configure): Use $top_builddir, not $top_reldir.
	(other_input_files): New variable.
	(dirname): Fixed bug where dirname of 'a/b/c' was 'a', not 'a/b'.

	Changes from Gord Matzigkeit to enabled hierarchies deeper than 2:
	* automake.in (input_files, seen_make_set): Declare globally.
	(parse_arguments): Use input_files, not make_list.
	Only scan configure.in once.
	(handle_dist): Use SUBDIRS to determine when to make
	subdirectories and recurisvely dist.  Use $(topdir), not "..", to
	find top of dist tree.
	(handle_configure): Check for AC_PROG_MAKE_SET here.  Don't require
	configure.in (done elsewhere).