@@ -675,7 +675,7 @@ sub handle_texinfo
 
     # How to clean.
     $output_rules .= "\nmostlyclean-info:\n";
-    &pretty_print_rule ("\t", "\t  ", @texi_cleans);
+    &pretty_print_rule ("\trm -f", "\t  ", @texi_cleans);
     $output_rules .= ("\nclean-info:\n\ndistclean-info:\n\n"
 		      . "maintainer-clean-info:\n\t"
 		      . 'rm -f $(INFOS)' . "\n");
