@@ -1,5 +1,7 @@
 Mon Feb  5 14:58:58 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
+	* automake.in (handle_texinfo): Include "rm" when deleting files.
+
 	* Makefile.am (maintainer-check): Expect only one ${...}.
 	* texinfos.am (install-info): Remove unneeded ${...}.  From Jim
 	Meyering.
